# image_to_cad_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  curves_generator.cpp  curves_generator.h  irit_exporter.cpp  irit_exporter.h  main.cpp  math.h  preprocess.cpp  preprocess.h  preprocess_only_main.cpp  process_graph.cpp  process_graph.h  surfaces_generator.cpp  surfaces_generator.h  test.cpp  types.h  utils.h  voronoi.cpp  voronoi.h  voronoi_visual_utils.hpp
cmake/: FetchArgParse.cmake  FetchBoost.cmake  FetchOpenCV.cmake  FindIrit.cmake  utils.cmake
